--- a/index.html
+++ b/index.html
@@ -540,22 +540,31 @@
 
     <p class="modal-title">Leave your contacts and we will call you back</p>
 
-<div class="modal-divison">
+
     <label for="user-text" class="input-text">Name</label>
-    
+    <div class="modal-divison">
+    <svg class="svg-modal-items"  width="18" height="24">
+      <use href="./images/icons.svg#icon-person"></use>
+    </svg>
     <input type="text" name="user-name" class="modal-input" required>
   </div>   
  
-<div>
+
     <label for="user-text" class="input-text">Phone</label>
-    <svg class="svg-modal-items"  width="20" height="20">
-      <use href="./images/icons.svg#icon-person"></use>
+    <div class="modal-divison">
+    <svg class="svg-modal-items"  width="18" height="24">
+      <use href="./images/icons.svg#icon-phone"></use>
     </svg>
     <input type="text" name="user-tel" class="modal-input">
   </div>
 
     <label for="user-text" class="input-text">Email</label>
+<div class="modal-divison">
+  <svg class="svg-modal-email"  width="18" height="24">
+    <use href="./images/icons.svg#icon-email"></use>
+  </svg>
     <input type="text" name="user-mail" class="modal-input">
+  </div>
 
 
     <div class="modal-filed">
@@ -567,7 +576,7 @@
     <input type="checkbox" name="" value="Privacy Policy" id="Privacy Policy" class="input-check visually-hidden">
     <label for="Privacy Policy" class="privacy-label"><span class="svg-check"><svg class="team-social-svg"  width="10" height="8">
       <use href="./images/icons.svg#icon-seta"></use>
-    </svg></span>I accept the terms and conditions of the <span class="privacy-item"><a href="https://">Privacy Policy</a></span></label>
+    </svg></span><span class="privacy-text">I accept the terms and conditions of the <span class="privacy-item"><a href="https://">Privacy Policy</a></span></span></label>
     </div>
 
 
