--- a/index.html
+++ b/index.html
@@ -543,27 +543,30 @@
 
     <label for="user-text" class="input-text">Name</label>
     <div class="modal-divison">
+    
+    <input type="text" name="user-name" class="modal-input" required>
     <svg class="svg-modal-items"  width="18" height="24">
       <use href="./images/icons.svg#icon-person"></use>
     </svg>
-    <input type="text" name="user-name" class="modal-input" required>
   </div>   
  
 
     <label for="user-text" class="input-text">Phone</label>
     <div class="modal-divison">
+    
+    <input type="text" name="user-tel" class="modal-input">
     <svg class="svg-modal-items"  width="18" height="24">
       <use href="./images/icons.svg#icon-phone"></use>
     </svg>
-    <input type="text" name="user-tel" class="modal-input">
   </div>
 
-    <label for="user-text" class="input-text">Email</label>
+    <label for="user-mail" class="input-text">Email</label>
 <div class="modal-divison">
-  <svg class="svg-modal-email"  width="18" height="24">
-    <use href="./images/icons.svg#icon-email"></use>
-  </svg>
+  
     <input type="text" name="user-mail" class="modal-input">
+    <svg class="svg-modal-items"  width="18" height="24">
+      <use href="./images/icons.svg#icon-email"></use>
+    </svg>
   </div>
 
 
