--- a/portfolio.html
+++ b/portfolio.html
@@ -134,49 +134,64 @@
 
     <!-- FOOTER -->
     <footer class="footer-box">
-        <div class="container all-footer">
-  
-          <div class="footer-container">
-        <a href="./index.html" class="footer-logo"><span class="footer-web">WEB</span>STUDIO</a>
-        <p class="footer-box-text">
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
-        </p>
-         </div>
-  
-         <div class="social-footer">
-          <h4 class="footer-social-title">Social media</h4>
-          <ul class="footer-social-icons">
-            <li class="svg-footer"><a href="https://" class="footer-social-link">
-              <svg class="team-social-svg" width="20" height="20">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-  
-            </a> </li>
-  
-  
-            <li class="svg-footer"><a href="https://" class="footer-social-link">
-              <svg class="team-social-svg" width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-  
-            </a> </li>
-            <li class="svg-footer"><a href="https://" class="footer-social-link">
-  
-              <svg class="team-social-svg" width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a> </li>
-            <li class="svg-footer"><a href="https://" class="footer-social-link">
-  
-              <svg class="team-social-svg"  width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a> </li>
-          </ul>
-        </div>
-      </div>
-      </footer>
+      <div class="container all-footer">
 
+        <div class="footer-container">
+      <a href="./index.html" class="footer-logo"><span class="footer-web">WEB</span>STUDIO</a>
+      <p class="footer-box-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+       </div>
+
+       <div class="social-footer">
+        <b>Social media</b>
+        <ul class="footer-social-icons">
+          <li class="svg-footer"><a href="https://" class="footer-social-link">
+            <svg class="team-social-svg" width="20" height="20">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+
+          </a> </li>
+
+
+          <li class="svg-footer"><a href="https://" class="footer-social-link">
+            <svg class="team-social-svg" width="20" height="20">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+
+          </a> </li>
+          <li class="svg-footer"><a href="https://" class="footer-social-link">
+
+            <svg class="team-social-svg" width="20" height="20">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a> </li>
+          <li class="svg-footer"><a href="https://" class="footer-social-link">
+
+            <svg class="team-social-svg"  width="20" height="20">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a> </li>
+        </ul>
+      </div>
+
+      <div class="input-footer">
+        <b class="input-footer-title">Subscribe</b>
+        <div class="footer-inpu-items">
+        <input type="text" placeholder="E-mail" class="input-area-footer">
+        <button type="submit" class="button-footer">Subscribe</button>
+        <svg class="svg-submmit"  width="24" height="20">
+          <use href="./images/icons.svg#icon-send"></use>
+        </svg>
+        </div>
+        
+
+
+      </div>
+    </div>
+
+
+    </footer>
  </body>
 </html>
