--- a/portfolio.html
+++ b/portfolio.html
@@ -145,7 +145,7 @@
        </div>
 
        <div class="social-footer">
-        <b>Social media</b>
+        <b class="title-footer-social">Social media</b>
         <ul class="footer-social-icons">
           <li class="svg-footer"><a href="https://" class="footer-social-link">
             <svg class="team-social-svg" width="20" height="20">
@@ -179,11 +179,13 @@
       <div class="input-footer">
         <b class="input-footer-title">Subscribe</b>
         <div class="footer-inpu-items">
-        <input type="text" placeholder="E-mail" class="input-area-footer">
-        <button type="submit" class="button-footer">Subscribe</button>
-        <svg class="svg-submmit"  width="24" height="20">
+          <form class="footer-form">
+        <input type="mail" placeholder="E-mail" class="input-area-footer">
+        <button type="submit" class="button-footer"><span class="teste">Subscribe</span> <span class="svg-position-footer"><svg class="svg-submmit"  width="24" height="20">
           <use href="./images/icons.svg#icon-send"></use>
-        </svg>
+        </svg></span></button>
+        
+      </form>
         </div>
         
 
