--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
     </svg>
   </div>   
 
-
+<div class="modal-distance">
     <label for="user_phone" class="input-text">Phone</label>
     <div class="modal-divison">
     
@@ -562,8 +562,8 @@
       <use href="./images/icons.svg#icon-phone"></use>
     </svg>
   </div>
-
-
+</div>
+<div class="modal-distance">
     <label for="user_email" class="input-text">Email</label>
 <div class="modal-divison">
   
@@ -572,13 +572,15 @@
       <use href="./images/icons.svg#icon-email"></use>
     </svg>
   </div>
+</div>
 
 
-
+  <div class="modal-distance">
     <div class="modal-filed">
       <label for="user-text" class="input-text">Comment</label>
       <textarea name="user-text" id="user-text" class="modal-message" placeholder="Text input"></textarea>
     </div>
+  </div>
 
     <div class="privacy-input">
     <input type="checkbox" name="" value="Privacy Policy" id="Privacy Policy" class="input-check visually-hidden">
@@ -586,12 +588,12 @@
       <use href="./images/icons.svg#icon-seta"></use>
     </svg></span><span class="privacy-text">I accept the terms and conditions of the <span class="privacy-item"><a href="https://">Privacy Policy</a></span></span></label>
     </div>
-  </form>
-
+  
 
 
     <button type="submit" class="modal-button">Send</button>
-      
+  
+  </form>
 
 
     </div>
