--- a/index.html
+++ b/index.html
@@ -535,11 +535,12 @@
 <!-- MODAL -->
    <div class="backdrop is-hidden" data-modal>
     <div class="modal">
+      <div class="test">
       <button type="button" class="btn-modal" data-modal-close><svg class="modal-svg" width="8" height="8">
         <use href="./images/icons.svg#icon-close-black"></use>
       </svg>
     </button>
-
+  </div>
     <p class="modal-title">Leave your contacts and we will call you back</p>
 
 <form class="modal-form">
